fix mistyping and add relations to user

--- a/app/views/items/_form.html.slim
+++ b/app/views/items/_form.html.slim
@@ -1,5 +1,5 @@
 = simple_form_for @item do |f|
   = f.input :title, label: 'Item Title'
-  = f.input :descrtiption
+  = f.input :description
   = f.submit
 
