--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,8 +28,8 @@ html
               li= link_to 'LogIn', user_session_path
               li= link_to 'Sign Up', new_user_registration_path
 
-    - flash.each do |name, msg|
-      = content_tag :div, msg, class: "alert-#{name}"
-
   .container
+    - flash.each do |name, msg|
+      = content_tag :div, msg, class: "alert alert-#{name}"
+
     = yield
