--- a/app/views/items/index.html.slim
+++ b/app/views/items/index.html.slim
@@ -1,6 +1,42 @@
-.col-md-8.col-offset-2
+.col-md-10.col-offset-1
   - @items.each do |item|
-    h2= link_to item.title, item_path(item)
-    p= item.description
+    .index-wrapper
+      - if item.completed?
+        .row.item
+          .col-md-2
+            p= link_to complete_item_path(item), method: :path do
+              i.fa.fa-check.fa-lg
+
+          .col-md-2
+            p= link_to complete_item_path(item), method: :path do
+              i.fa.fa-trash.fa-lg
+
+          .col-md-8
+            h2
+              strick= link_to item.title, item_path(item), style: { opacity: 0.5 }
+            p= item.description
+            p Completed
+            |
+             = time_ago_in_words(item.complete_ap)
+            |  ago
+
+      - else
+        .row.item
+          .col-md-2
+            p= link_to complete_item_path(item), method: :path do
+              i.fa.fa-check.fa-lg
+          .col-md-8
+            h2= link_to item.title, item, class: 'item-title'
+            p.item-sub-title.itme.desc
+              = item.description
+            p.time-created-at.item-sub-title
+              | Created
+              =< time_ago_in_words(item.created_at)
+              |  ago
+
+          .col-md-2
+            p= link_to item, method: :delete, data: {comfirm: ' Are you sure?'} do
+              i.fa.fa-trash.fa-lg
+
 - unless user_signed_in?
   = render 'welcome_page'
