--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,8 @@
 @import url(http://fonts.googleapis.com/css?family=Oswald:400,700|Merriweather:400,300);
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 
 /* Mixins, variables, etc... */
